--- a/gh-pages/pages/index.mdx
+++ b/gh-pages/pages/index.mdx
@@ -2,16 +2,18 @@
 
 ## Installation
 
-VechaiUI works out of the box with create-react-app (including TypeScript version), Preact cli (with compat), Next.js, Gatsby and any other environment.
-
 To install the VechaiUI run the following within your project directory.
 
 ```bash
-npm i @vechaiui/core @vechaiui/react @tailwindcss/forms
+npm install tailwind-layout-react
 
 # OR
 
-yarn add @vechaiui/core @vechaiui/react @tailwindcss/forms
+yarn add tailwind-layout-react
+
+# OR
+
+pnpm add tailwind-layout-react
 ```
 
 ## Configuration
